Changes in XXXX

* Update the detector construction so that it look for BIRKSCONSTANT
  in the material properties table and copies the value into the
  material ionization properties.  This works around a missing feature
  in GDML where certain material description values cannot be set.  In
  GDML, add the property "BIRKSCONSTANT" with the value in units of
  "mm/MeV" and edep-sim will "take care of the rest".

* Add /edep/material/birksConstant to allow the Birks constant to
  be set for any material.  This must be used before the /edep/update
  macro command.  It accepts a material name, the value of the Birks
  constant, and the units for the birks constant.  For example:
  ```/edep/material/birksConstant Scintillator 0.12 mm/MeV```

* Add an example of generating a GDML file using GeGeDe.  This shows
  how to build a gdml file that sets the auxvalues needed by edep-sim,
  and can be used as a starting point for a user geometry.

* Improvement: Add a new include file (EDepSimUnits.h) for use with
  the edepsim_io library.  The output of EDepSim is in the same units
  as Geant4 (i.e. the CLHEP units).  Adding this include file means
  that the CLHEP SystemOfUnits.h file is not required.

* Improvements: The GDML validations have been cleaned up.  The output
  still should be inspected using ROOT and edep-disp, but the tests
  are simplified to make it easier to interpret the output.  This is
  mostly intended as an edep-sim developer (pre-)release tool.

* Bug fix: Make sure that the default geometry builds without
  overlaps, and add a validation to catch when it does not.

* Bug fix: Add error traps in EDepSimRooTrackerKinemGenerator to try
  and catch malformed rooTracker files before processing.  This tries
  to prevent a silent failure.

* Remove dead test files that are left over from old, and unsupported
  methods of reading the edep-sim output.

* Bug fix: Fix some compilation warnings.  The compilation should be
  warning free.
